--- a/asstes/sections/html/bio.html
+++ b/asstes/sections/html/bio.html
@@ -27,9 +27,13 @@
             <div class="title-container">
                 <h1 class="bio-title">Bio</h1>
             </div>
-            
-            <!-- Aquí se renderizará la timeline con la nueva animación -->
-            <div id="timeline"></div>
+            <!-- Diseño alternado con imagen central -->
+            <div class="bio-layout">
+                <div class="bio-image-container">
+                    
+                </div>
+                <div id="bio-blocks" class="bio-blocks"></div>
+            </div>
         </div>
     </main>
 
